// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content slot 1`] = `
<div class="buri-tree-select" style="height: 300px;">
  <div class="buri-sidebar buri-tree-select__nav"><a class="buri-sidebar-item buri-sidebar-item--select buri-tree-select__nav-item">
      <div class="buri-sidebar-item__text">group1
        <!---->
      </div>
    </a></div>
  <div class="buri-tree-select__content">Custom Content</div>
</div>
`;

exports[`empty list 1`] = `
<div class="buri-tree-select" style="height: 300px;">
  <div class="buri-sidebar buri-tree-select__nav"></div>
  <div class="buri-tree-select__content"></div>
</div>
`;

exports[`height prop 1`] = `
<div class="buri-tree-select" style="height: 100vh;">
  <div class="buri-sidebar buri-tree-select__nav"></div>
  <div class="buri-tree-select__content"></div>
</div>
`;

exports[`nav info 1`] = `
<div class="buri-tree-select" style="height: 300px;">
  <div class="buri-sidebar buri-tree-select__nav"><a class="buri-sidebar-item buri-sidebar-item--select buri-tree-select__nav-item">
      <div class="buri-sidebar-item__text">group1<div class="buri-info buri-sidebar-item__info">3</div>
      </div>
    </a></div>
  <div class="buri-tree-select__content"></div>
</div>
`;
